# LiMp

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cursor-0.49.5-x86_64.AppImage  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIMPS.jl  README.md  README_ENHANCED.md  adapter_model  api.jl  config.jl  demo_example.py  entropy.jl  entropy_engine.py  example_usage.py  julia_client.py  julia_integration.jl  matrices.jl  matrix_optimization_results.json  matrix_processor.py  polynomials.jl  pyproject.toml  requirements.txt  run_tests.py  setup.py  setup_github.sh  simulate_example.py  simulation_analysis.py  test_entropy_engine.py  test_with_existing.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
entropy_engine/: __init__.py  cli.py  core.py
repZ/JsonGenie/: 20250106_130816.json  20250106_133254.json  20250106_133555.json  20250106_134227.json  20250107_051235.json  20250107_051811.json  20250107_103638.json  20250110_054727.json  20250110_054756.json
repZ/Librera/: pg43383-images-3.epub
repZ/device.SM-S146VL/: .bash_history  README.md  mathematics-12-04016.xml  mathematics-12-04033.xml  mathematics-12-04034.xml
repZ/device.SM-S146VL/profile.Librera/device.SM-S146VL/: MARL-portfolio-AS (1).py  app-Progress.json  config-1.json  mathematics-12-04030.xml  mathematics-12-04036.xml  matrix_vhostenv.env.txt  setup.sh  uncles bert.txt
repZ/src/config/: app-CSS.json  app-Recent.json  app-State.json
tests/: __init__.py  test_core.py
